# time-flo

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  meson.build  meson_options.txt
.github/workflows/: ci.yml
build-aux/: io.cassaundra.TimeFlo.Devel.json
data/: io.cassaundra.TimeFlo.desktop.in.in  io.cassaundra.TimeFlo.gschema.xml.in  io.cassaundra.TimeFlo.metainfo.xml.in.in
data/resources/: resources.gresource.xml
data/resources/ui/: window.ui
docs/: design.md  plan.md  requirements.md  vnv.md
po/: POTFILES.in
src/: app.rs  application.rs  error.rs  lib.rs  main.rs  timer.rs  window.rs
