[package]
name = "time-flo"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = { version = "0.15.0", default-features = false, features = ["default_fonts", "egui_glow", "persistence"] }
notify-rust = "4"
serde = { version = "1", features = ["derive"] }
serde_millis = "0.1"