[package]
name = "time-flo"
version = "0.1.0"
edition = "2018"

[dependencies]
eframe = { version = "0.15.0", default-features = false, features = ["default_fonts", "egui_glow", "persistence"] }
notify-rust = { version = "4", optional = true }
rodio = { version = "0.14", optional = true }
serde = { version = "1", features = ["derive"] }
serde_millis = "0.1"
thiserror = "1.0"

[features]
default = ["notifications", "sound"]
notifications = ["notify-rust"]
sound = ["rodio"]